--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
 
 #mybatis plus
 mybatis-plus:
-  mapper-locations: classpath:pro/jiefzz/demo/uow/demo1/uowgenroot/*.xml
+  mapper-locations: classpath:mapper/*.xml
   #实体扫描，多个package用逗号或者分号分隔
   # typeAliasesPackage: com.blackcat.mybatis.entiry
   #typeEnumsPackage: com.baomidou.springboot.com.blackcat.redis.entity.enums
